<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include layout="@layout/layout_title" />
   <!-- 新浪微博 -->
    <RelativeLayout
        android:id="@+id/item_set_sina_rl"
        style="@style/set_root" >

        <TextView
            style="@style/lv_item_nohead_left_comm_tv"
            android:text="@string/set_item_sina" />

        <TextView
            android:id="@+id/item_set_sina_status_tv"
            style="@style/lv_item_open_right_comm_tv"
            android:layout_toLeftOf="@+id/item_set_sina_open_iv" />

        <ImageView
            android:id="@+id/item_set_sina_open_iv"
            style="@style/lv_item_open_comm_iv" />
    </RelativeLayout>

    <include layout="@layout/divider_horizontal" />
  <!-- 手机 -->
    <RelativeLayout
      android:id="@+id/item_set_phone_rl"
        style="@style/set_root" >

        <TextView
            style="@style/lv_item_nohead_left_comm_tv"
            android:text="@string/set_item_phone" />

        <TextView
            android:id="@+id/item_set_phone_status_tv"
            style="@style/lv_item_open_right_comm_tv"
            android:layout_toLeftOf="@+id/item_set0_phone_open_iv" />

        <ImageView
            android:id="@+id/item_set0_phone_open_iv"
            style="@style/lv_item_open_comm_iv" />
    </RelativeLayout>

    <include layout="@layout/divider_horizontal" />
 <!--修改密码-->
    <RelativeLayout 
        android:id="@+id/item_set_alertpwd_rl"
        
        style="@style/set_root" >

        <TextView
            android:text="@string/set_item_alertpwd"
            android:id="@+id/item_set_category_tv"
            style="@style/lv_item_nohead_left_comm_tv" />

        <ImageView
            style="@style/lv_item_open_comm_iv" />
    </RelativeLayout>

    
    
    
    <!--关于我们 -->
      <include layout="@layout/divider_horizontal" />

    <RelativeLayout
        android:id="@+id/item_set_aboutus_rl"
        
         style="@style/set_root" >

        <TextView
              android:text="@string/set_item_aboutus"
            style="@style/lv_item_nohead_left_comm_tv" />

        <ImageView
          
            style="@style/lv_item_open_comm_iv" />
    </RelativeLayout>
    
    
   <!-- 联系客服 -->
     <include layout="@layout/divider_horizontal" />

    <RelativeLayout
        android:id="@+id/item_set_mm_rl"
         style="@style/set_root" >

        <TextView
               android:text="@string/set_item_mm"
            style="@style/lv_item_nohead_left_comm_tv" />

        <ImageView
            style="@style/lv_item_open_comm_iv" />
    </RelativeLayout>
   <!-- 好评 -->
      <include layout="@layout/divider_horizontal" />

    <RelativeLayout
        android:id="@+id/item_set_good_rl"
        style="@style/set_root" >

        <TextView
            style="@style/lv_item_nohead_left_comm_tv"
            android:text="@string/set_item_good" />

        <ImageView
            android:id="@+id/imageView1"
            style="@style/lv_item_open_comm_iv" />
    </RelativeLayout>
    
    <!--启动通讯录 -->
      <include layout="@layout/divider_horizontal" />

    <RelativeLayout
        android:id="@+id/item_set_opencon_rl"
        style="@style/set_root" >

        <TextView
            style="@style/lv_item_nohead_left_comm_tv"
            android:text="@string/set_item_open_con" />
 

        <CheckBox
            android:button="@null"
            android:background="@drawable/selector_toggle"
            android:id="@+id/item_set_opencon_cb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           android:layout_alignParentRight="true"
           android:layout_centerVertical="true"
    />
    </RelativeLayout>
    
    <!-- bt -->
      <include layout="@layout/divider_horizontal" />
        <Button
        android:id="@+id/set_exit_login_bt"
         style="@style/comm_red_bt"
        android:text="@string/exit_login"
        />
      
      
   

</LinearLayout>