<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_tab_group"
    android:layout_width="match_parent"
    android:layout_height="@dimen/title_height"
    android:layout_alignParentBottom="true"
    android:background="@color/bottom_color"
    android:gravity="center"
    android:orientation="horizontal" >

    <RadioButton
        android:id="@+id/main_tab_me"
        style="@style/tab_icon"
        android:checked="true"
        android:drawableTop="@drawable/selector_nav_tab_mypage"
        android:text="@string/title_my" />

    <RadioButton
        android:id="@+id/main_tab_near"
        style="@style/tab_icon"
        android:drawableTop="@drawable/selector_nav_tab_near"
        android:text="@string/title_nearby" />

    <RadioButton
        android:id="@+id/main_tab_message"
        style="@style/tab_icon"
        android:drawableTop="@drawable/selector_nav_tab_contacts"
        android:text="@string/title_contacts" />

</RadioGroup>