<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include layout="@layout/layout_title" />

    <ImageView
        android:onClick="onClick"
        android:id="@+id/perfect_data_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/selector_add_head" />

    <include layout="@layout/divider_horizontal" />

    <RelativeLayout
        style="@style/lv_item_comm_root"
         >

        <TextView
            android:id="@+id/perfect_nickname"
            style="@style/lv_item_nohead_left_comm_tv"
            android:text="@string/nickname" />

        <EditText
            android:textSize="@dimen/text_size_nor__"
            android:id="@+id/perfect_nickname_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@id/perfect_nickname"
            android:background="@null"
            android:hint="@string/please_click_input" />
    </RelativeLayout>

    <include layout="@layout/divider_horizontal" />

    <RelativeLayout
           android:onClick="onClick"
        android:id="@+id/perfect_data_post_rl"
      style="@style/lv_item_comm_root" >

        <TextView
            android:id="@+id/perfect_data_location_tv_temp"
             style="@style/lv_item_nohead_left_comm_tv"
            android:text="@string/location" />

        <TextView
             android:id="@+id/perfect_data_post_tv"
            style="@style/lv_item_nohead_left_comm_tv"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@id/perfect_data_location_tv_temp"
            android:text="控球后卫" />

        <ImageView
            style="@style/lv_item_open_comm_iv"
          
            
            android:src="@drawable/selector_select" />
    </RelativeLayout>

    <include layout="@layout/divider_horizontal" />

    <RelativeLayout
        android:onClick="onClick"
        android:id="@+id/perfect_data_sex_rl"
      style="@style/lv_item_comm_root">

        <TextView
            android:id="@+id/perfect_data_sex_tv_temp"
            style="@style/lv_item_nohead_left_comm_tv"
            android:text="@string/sex" />

        <TextView
             android:id="@+id/perfect_data_sex_tv"
           style="@style/lv_item_nohead_left_comm_tv"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@id/perfect_data_sex_tv_temp"
            android:text="男" />

       <ImageView
            style="@style/lv_item_open_comm_iv"
          
            
            android:src="@drawable/selector_select" />
    </RelativeLayout>

    <include layout="@layout/divider_horizontal" />

</LinearLayout>